--- a/app/src/main/res/layout/fragment_create_account.xml
+++ b/app/src/main/res/layout/fragment_create_account.xml
@@ -3,31 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/appbkg"
+    android:background="@drawable/splashbkg"
     tools:context=".fragments.CreateAccountFragment">
+
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="24sp"
+        android:textSize="40sp"
+        android:layout_marginBottom="40dp"
         android:text="Create \nAccount"
-        android:layout_marginTop="78dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_above="@id/LL1"
+        android:layout_marginLeft="31dp"
+        android:layout_marginStart="31dp"
         android:textColor="@color/black"/>
 
     <LinearLayout
         android:id="@+id/LL1"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:orientation="vertical">
 
+
         <EditText
             android:id="@+id/nameET"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="44dp"
+            android:layout_gravity="center"
             android:layout_margin="8dp"
             android:background="@drawable/text_box"
             android:drawableLeft="@drawable/usernameicon"
@@ -37,8 +42,9 @@
 
         <EditText
             android:id="@+id/emailET"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="44dp"
+            android:layout_gravity="center"
             android:layout_margin="8dp"
             android:background="@drawable/text_box"
             android:drawableLeft="@drawable/emailicon"
@@ -48,9 +54,14 @@
 
         <EditText
             android:id="@+id/passwordET"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="44dp"
+            android:layout_gravity="center"
             android:layout_margin="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/text_box"
             android:drawableLeft="@drawable/passicon"
             android:drawablePadding="12dp"
@@ -59,8 +70,9 @@
 
         <EditText
             android:id="@+id/confirmpasswordET"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="44dp"
+            android:layout_gravity="center"
             android:layout_margin="8dp"
             android:background="@drawable/text_box"
             android:drawableLeft="@drawable/passwordicon"
@@ -69,6 +81,7 @@
             android:padding="12dp" />
 
     </LinearLayout>
+
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -80,13 +93,15 @@
 
     <Button
         android:id="@+id/signUpbtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="45dp"
         android:text="Sign Up"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_above="@id/loginTV"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/LL1"
+        android:layout_marginBottom="10dp"
         android:textColor="#fff"
         android:background="@drawable/btnbkg"/>
 
@@ -95,10 +110,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
         android:textColor="@color/black"
-        android:layout_marginBottom="150dp"
 
+        android:layout_marginTop="2dp"
+        android:layout_below="@id/signUpbtn"
         android:text="Already a user? Login" />
 
     <TextView
@@ -112,6 +127,13 @@
         android:textStyle="bold"
         android:textColor="@color/black"
         android:text="C O M M U N I T A S K" />
+    <ImageView
+        android:layout_width="424dp"
+        android:layout_height="225dp"
+        android:layout_marginLeft="-24dp"
+
+        android:layout_marginTop="626dp"
+        android:background="@drawable/hands1" />
 
 
 
