--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="browm">#C84A46</color>
     <color name="blue">#3074A7</color>
     <color name="peach">#f7c7b5</color>
+    <color name="gray">#504747</color>
 
 </resources>
