--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,23 +3,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/appbkg"
+    android:background="@drawable/splashbkg"
     tools:context=".fragments.CreateAccountFragment">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="24sp"
-        android:text="Welcome! \nLogin"
-        android:layout_marginTop="78dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:textColor="@color/black"/>
+        android:layout_marginStart="31dp"
+        android:layout_marginLeft="31dp"
+        android:layout_above="@id/login"
+        android:text="Welcome!"
+
+        android:textColor="@color/black"
+        android:textSize="40sp"
+        android:textStyle="bold" />
+    <TextView
+        android:id="@+id/login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="31dp"
+        android:layout_marginLeft="31dp"
+        android:layout_above="@id/ll1"
+        android:layout_marginBottom="40dp"
+        android:text="Login"
+        android:textColor="@color/gray"
+        android:textSize="32sp"
+        android:textStyle="bold" />
+
+
+    <ImageView
+        android:layout_width="424dp"
+        android:layout_height="225dp"
+        android:layout_marginTop="44dp"
+
+        android:background="@drawable/hands1"/>
 
     <LinearLayout
         android:id="@+id/ll1"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:orientation="vertical">
@@ -27,9 +48,10 @@
 
         <EditText
             android:id="@+id/emailET"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="44dp"
             android:layout_margin="8dp"
+            android:layout_gravity="center"
             android:background="@drawable/text_box"
             android:drawableLeft="@drawable/emailicon"
             android:drawablePadding="12dp"
@@ -38,9 +60,10 @@
 
         <EditText
             android:id="@+id/passwordET"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="44dp"
             android:layout_margin="8dp"
+            android:layout_gravity="center"
             android:background="@drawable/text_box"
             android:drawableLeft="@drawable/passicon"
             android:drawablePadding="12dp"
@@ -51,12 +74,11 @@
             android:id="@+id/forgotTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginEnd="12dp"
             android:text="Forgot Password"
             android:textColor="@color/black"
-            android:layout_gravity="end"
-            android:textStyle="bold"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp" />
+            android:textStyle="bold" />
 
 
     </LinearLayout>
@@ -68,30 +90,33 @@
         android:visibility="gone"
         android:layout_below="@id/ll1"
         android:layout_above="@id/loginBtn"/>
+
+
     <Button
         android:id="@+id/loginBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="45dp"
+        android:layout_below="@+id/ll1"
+        android:layout_marginTop="20dp"
+
+        android:background="@drawable/btnbkg"
+        android:layout_centerHorizontal="true"
         android:text="LOGIN"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_above="@id/googleSignInBtn"
-        android:layout_marginBottom="8dp"
-        android:textColor="#fff"
 
-        android:background="@drawable/btnbkg"/>
+        android:textColor="#fff" />
 
-
-        <Button
+    <Button
             android:id="@+id/googleSignInBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="45dp"
             android:textAlignment="center"
             android:text="Sign In with google"
             android:layout_marginStart="32dp"
+            android:layout_centerHorizontal="true"
             android:background="@drawable/btnbkg"
             android:layout_marginEnd="32dp"
-            android:layout_above="@id/signUpTV"
+            android:layout_below="@id/loginBtn"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="8dp"
             android:textColor="#fff"/>
 
@@ -101,10 +126,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:textColor="@color/black"
-        android:layout_marginBottom="140dp"
 
+        android:textColor="@color/black"
+        android:layout_below="@id/googleSignInBtn"
+        android:layout_marginTop="2dp"
         android:text="New user? Create Account" />
 
     <TextView
