--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,20 +31,25 @@
                 android:textStyle="bold"
                 android:textSize="18sp"
                 android:textColor="@android:color/black"/>
+
             <ImageButton
                 android:id="@+id/send"
-                android:contentDescription="@null"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
-                android:layout_margin="12dp"/>
+                android:layout_centerVertical="true"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginBottom="12dp"
+                android:contentDescription="@null" />
 
         </RelativeLayout>
 
 
     </androidx.appcompat.widget.Toolbar>
+
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
@@ -57,6 +62,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/tabLayout"
         android:layout_alignParentBottom="true"/>
+    
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout2"
+        android:layout_width="55dp"
+        android:layout_height="?attr/actionBarSize"/>
 
 
 
