--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -1,14 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/splashbkg"
     tools:context=".fragments.ForgotPassword">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="31dp"
+        android:layout_marginLeft="31dp"
+        android:layout_above="@id/login"
+        android:text="Forgot!"
 
-</FrameLayout>
+        android:textColor="@color/black"
+        android:textSize="40sp"
+        android:textStyle="bold" />
+    <TextView
+        android:id="@+id/login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="31dp"
+        android:layout_marginLeft="31dp"
+        android:layout_above="@id/ll1"
+        android:layout_marginBottom="40dp"
+        android:text="Password"
+        android:textColor="@color/gray"
+        android:textSize="32sp"
+        android:textStyle="bold" />
+
+
+    <ImageView
+        android:layout_width="424dp"
+        android:layout_height="225dp"
+        android:layout_marginTop="44dp"
+
+        android:background="@drawable/hands1"/>
+
+    <LinearLayout
+        android:id="@+id/ll1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
+
+
+        <EditText
+            android:id="@+id/emailET"
+            android:layout_width="300dp"
+            android:layout_height="44dp"
+            android:layout_gravity="center"
+            android:layout_margin="8dp"
+            android:background="@drawable/text_box"
+            android:drawableLeft="@drawable/emailicon"
+            android:drawablePadding="12dp"
+            android:hint="Email"
+            android:padding="12dp" />
+    </LinearLayout>
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"
+        android:layout_below="@id/ll1"
+        android:layout_above="@id/recoverBtn"/>
+
+
+    <Button
+        android:id="@+id/recoverBtn"
+        android:layout_width="300dp"
+        android:layout_height="45dp"
+        android:layout_below="@+id/ll1"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/btnbkg"
+        android:layout_centerHorizontal="true"
+        android:text="Recover Account"
+        android:textColor="#fff" />
+
+
+    <TextView
+        android:id="@+id/loginTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/black"
+        android:layout_below="@id/recoverBtn"
+        android:textStyle="bold"
+        android:layout_marginTop="10dp"
+        android:text="Back to Login" />
+
+    <TextView
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="26dp"
+        android:fontFamily="@font/lexend_tera"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:text="C O M M U N I T A S K" />
+
+
+
+
+
+</RelativeLayout>
