--- a/app/src/main/res/layout/home_items.xml
+++ b/app/src/main/res/layout/home_items.xml
@@ -6,8 +6,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profileImage"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         app:civ_border_color="#434343"
         app:civ_border_width="1dp"
         android:src="@drawable/usericon"
@@ -15,8 +15,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="56dp"
         android:gravity="center_vertical"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_toEndOf="@+id/profileImage"
         android:layout_toRightOf="@id/profileImage"
         android:orientation="vertical">
