--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -34,9 +34,8 @@
     <ImageView
         android:layout_width="424dp"
         android:layout_height="225dp"
-        android:layout_marginTop="44dp"
-
-        android:background="@drawable/hands1"/>
+        android:layout_alignParentTop="true"
+        android:background="@drawable/hands1" />
 
     <LinearLayout
         android:id="@+id/ll1"
@@ -126,7 +125,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-
+        android:textStyle="bold"
         android:textColor="@color/black"
         android:layout_below="@id/googleSignInBtn"
         android:layout_marginTop="2dp"
@@ -138,14 +137,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="26dp"
+        android:layout_marginBottom="15dp"
         android:fontFamily="@font/lexend_tera"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:text="C O M M U N I T A S K" />
-
-
-
-
 
 </RelativeLayout>
