--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -4,68 +4,86 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
-    tools:context=".fragments.AddPost">
-    
+    tools:context=".fragments.AddPost"
+    tools:ignore="UnusedAttribute"
+    tools:targetApi="m">
+
     <RelativeLayout
         android:id="@+id/layout"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical">
 
         <ImageButton
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:background="@drawable/backbtn"
-            android:id="@+id/backBtn" />
+            android:id="@+id/backBtn"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
+            android:layout_margin="4dp"
+            android:background="@drawable/circlebkg"
+            android:elevation="3dp"
+            android:foreground="?attr/selectableItemBackground"
+            android:padding="4dp"
+            android:src="@drawable/backbtn" />
 
         <ImageButton
-            android:visibility="gone"
-            android:background="@drawable/nextbtn"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
+            android:id="@+id/nextBtn"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:id="@+id/nextBtn" />
-
-
-
+            android:layout_margin="4dp"
+            android:background="@drawable/circlebkg"
+            android:elevation="3dp"
+            android:foreground="?attr/selectableItemBackground"
+            android:padding="4dp"
+            android:src="@drawable/nextbtn"
+            android:visibility="gone" />
 
     </RelativeLayout>
 
-    <EditText
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/descriptionET"
-        android:layout_below="@id/layout"
-        android:background="@android:color/transparent"
-        android:hint="Share your milestone"
-        android:minLines="12" />
-    
-    <EditText
-        android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#000"
-        android:layout_margin="6dp"
-        android:layout_below="@id/descriptionET" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/layout">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:id="@+id/imageView"
-        android:visibility="gone"
-        android:contentDescription="@null"
-        android:layout_below="@id/descriptionET"
-        android:background="@color/gray" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/imageView" />
+            <EditText
+                android:id="@+id/descriptionET"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:hint="Share your milestone"
+                android:minLines="12" />
 
+            <View
+                android:id="@+id/view"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/descriptionET"
+                android:layout_margin="6dp"
+                android:background="#000" />
 
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_below="@id/view"
+                android:background="@color/colorAccent"
+                android:contentDescription="@null"
+                android:scaleType="centerCrop"
+                android:visibility="gone" />
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imageView" />
 
+        </RelativeLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
